# aoc-2017

./: .gitignore  README.md  aoc2017.cabal
app/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs
src/: Split.hs
test/: SplitTest.hs
