cabal-version:      2.4
name:               aoc2017
version:            0.1.0.0

synopsis: AOC 2017 solutions written in Haskell
license:            MIT
author:             Robin Daumann

executable day-01
    main-is:          Day01.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall

executable day-02
    main-is:          Day02.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall