cabal-version:      2.4
name:               aoc2017
version:            0.1.0.0

synopsis:           AOC 2017 solutions written in Haskell
license:            MIT
license-file:       LICENSE
author:             Robin Daumann

library
    exposed-modules: Split
    build-depends:   base ^>=4.14.3.0
    hs-source-dirs:  src
    default-language: Haskell2010
    ghc-options:     -Wall

test-suite split-test
    main-is:          SplitTest.hs
    type:             exitcode-stdio-1.0
    build-depends:    base ^>=4.14.3.0, aoc2017
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall

executable day-01
    main-is:          Day01.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall

executable day-02
    main-is:          Day02.hs
    build-depends:    base ^>=4.14.3.0, aoc2017
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall

executable day-03
    main-is:          Day03.hs
    build-depends:    base ^>=4.14.3.0, containers
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall

executable day-04
    main-is:          Day04.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
